finish full round of manuscript edits

--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -305,4 +305,10 @@ Educational Research},
    year = {2007}
 }
 
+@article{MiratrixWeiss2020,
+   author = {Miratrix, Luke, Michael Weiss, and Henderson, Brit},
+   title = {An Applied Researcher’s Guide to Estimating Effects From Multisite Individually Randomized Trials: Estimands, Estimators, and Estimates},
+   journal = {Journal of Research on Educational Effectiveness},
+   year = {2020, forthcoming},
+}
 
