--- a/validation/results/validate_d22.Rmd
+++ b/validation/results/validate_d22.Rmd
@@ -10,8 +10,8 @@ Models: random treatment effects.
 
 ```{r knit.options, echo = FALSE}
 knitr::opts_chunk$set(
-  cache = TRUE, warning = FALSE, message = FALSE, echo = FALSE,
-  fig.height = 4
+  cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE,
+  fig.height = 7
 )
 ```
 
@@ -77,6 +77,7 @@ d2.2_m2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.p
 print(d2.2_m2rc_nj50_power_plot)
 ```
 
+\newpage
 ## Varying school size
 
 ```{r nj100}
@@ -106,6 +107,7 @@ print(d2.2_m2rc_nj75_power_plot)
 model.params.list[['nbar']] <- 50
 ```
 
+\newpage
 ## Varying R2
 
 ```{r r2106}
@@ -148,6 +150,7 @@ model.params.list[['R2.2']] <- params.default[['R2.2']]
 ```
 
 
+\newpage
 ## Varying rho
 
 ```{r rho02}
@@ -186,6 +189,7 @@ model.params.list[['rho.X']] <- model.params.list[['rho.C']] <-rho.default
 model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.list[['rho.r']] <-rho.default
 ```
 
+\newpage
 ## Varying true positives
 
 ```{r MDES012500}
@@ -201,6 +205,7 @@ print(d2.2_m2rc_mdes0.1250.00.0.00_power_plot)
 model.params.list[['MDES']] <- params.default[['MDES']]
 ```
 
+\newpage
 ## Varying ICC
 
 ```{r ICC207}
@@ -228,6 +233,7 @@ print(d2.2_m2rc_ICC2.0_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
 
+\newpage
 ## Kappa
 
 ```{r kappa04}
@@ -249,6 +255,7 @@ print(d2.2_m2rc_kappa0.4_power_plot)
 model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- params.default[['kappa.w']]
 ```
 
+\newpage
 # MDES validation
 
 ```{r}
